[package]
name = "coord_transforms"
version = "1.4.0"
authors = ["David Kramer <davegkramer@gmail.com>"]
description = "A Rust crate use for performing coordinate transformations."
repository = "https://github.com/DaveKram/coord_transforms"
readme = "README.md"
keywords = ["coordinates", "geospatial", "transforms", "transformations"]
categories = ["algorithms", "embedded", "science", "parsing"]
license = "MIT"

[dependencies]
float-cmp = "0.9.0"
nalgebra = "0.32.6"

[dev-dependencies]
chrono = "0.4.38"
minifb = "0.27.0"
rayon = "1.10.0"
